Issue #2492947 by Mschudders, kwfinken, nightlife2008, RenatoG, baekelandt: Admin Menu covers content area in IE11

--- a/admin_menu.css
+++ b/admin_menu.css
@@ -16,6 +16,7 @@
   position: absolute;
   text-align: left;
   top: 0;
+  height: 30px;
   width: 100%;
 }
 #admin-menu-wrapper {
